include_directories("$ENV{DXSDK_DIR}/Include")
link_directories("$ENV{DXSDK_DIR}/Lib/x64")
# tutorials
add_subdirectory(Tutorial01)
add_subdirectory(Tutorial02)
add_subdirectory(Tutorial03)
add_subdirectory(Tutorial04)
add_subdirectory(Tutorial05)
add_subdirectory(Tutorial06)
add_subdirectory(Tutorial07)

